CMAKE_MINIMUM_REQUIRED(VERSION 3.28.3)
PROJECT(ltest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_C_COMPILER "/usr/bin/gcc")
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_EXTENSIONS ON)
SET(CMAKE_C_FLAGS "-fpic -g -O2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ffile-prefix-map=/build/r-base-tpN123/r-base-4.5.3=. -fstack-protector-strong -fstack-clash-protection -Wformat -Werror=format-security -fcf-protection -fdebug-prefix-map=/build/r-base-tpN123/r-base-4.5.3=/usr/src/r-base-4.5.3-1.2404.0 -Wdate-time -D_FORTIFY_SOURCE=3 -UNDEBUG -Wall -pedantic -g -O0 -fdiagnostics-color=always")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ltest ltest.c)
TARGET_COMPILE_DEFINITIONS(ltest PRIVATE "")
TARGET_LINK_LIBRARIES(ltest "")
